fix logo spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ img, .logo {
 .rozha {
     font-family: 'Rozha One', serif;
     font-style: normal;
-    font-size: 23px;
+    font-size: 42px;
     letter-spacing: 0.3em;
 }
 .image-container {
@@ -42,19 +42,18 @@ img, .logo {
     top: 36px;
     right: 44px;
 }
-.logo h1 {
+.logo p {
     margin: 0;
     color: white;
-    background-color: black;
-    padding: 0 16px 0 20px;
     text-align: center;
+    margin-right:-0.3em;
+}
+.logo > div {
+    width: 180px;
+    background-color: black;
 }
 .top {
-    margin-right: 30px !important;
     margin-bottom: 12px !important;
-}
-.top h1 {
-    padding-right: 10px;
 }
 .bottom {
     margin-left: 30px;
